--- a/web/locker.html
+++ b/web/locker.html
@@ -7,8 +7,25 @@
     position: relative;
   }
 
-  .locked {    
+  .locked {
     border-color: rgb(235, 46, 86);
+  }
+
+  .pending {
+    background: linear-gradient(145deg, #ffffff, #e9e9e9);
+    animation: gradient 3s infinite;
+  }
+
+  @keyframes gradient {
+    0% {
+      background: linear-gradient(145deg, #ffffff, #e9e9e9);
+    }
+    50% {
+      background: linear-gradient(145deg, #e9e9e9, #ffffff);
+    }
+    100% {
+      background: linear-gradient(145deg, #ffffff, #e9e9e9);
+    }
   }
 
   .locker .container-state {
@@ -30,10 +47,11 @@
     bottom: 0
   }
 </style>
-<div (click)="panel.callActorService(component, component._state.locked ?  'open' : 'close', $event)"
-  [className]="component._state.locked ? 'locker locked' : 'locker'">
+<div class="locker"
+  (click)="panel.callActorService(component, component._state.status == 'locked' ?  'open' : 'close', $event)"
+  [ngClass]="{'locked':component._state.status == 'locked', 'pending':component._state.status == 'pending' }">
   <img class="container-state"
-    src="{{panel.getComponentPluginDirectory(component)}}{{component._state.locked ? 'images/closed.svg' : 'images/opened.svg'}}">
+    src="{{panel.getComponentPluginDirectory(component)}}{{component._state.status == 'locked' ? 'images/closed.svg' : 'images/opened.svg'}}">
   <span class="container-id">{{component._state.lockerId}}</span>
 
 </div>
