--- a/web/locker.html
+++ b/web/locker.html
@@ -1,57 +1,5 @@
-<style>
-  .locker {
-    color: rgb(93, 93, 93);
-    border: 1px solid rgb(235, 235, 235);
-    width: 105px;
-    height: 100px;
-    position: relative;
-  }
-
-  .locked {
-    border-color: rgb(235, 46, 86);
-  }
-
-  .pending {
-    background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    animation: gradient 3s infinite;
-  }
-
-  @keyframes gradient {
-    0% {
-      background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    }
-    50% {
-      background: linear-gradient(145deg, #e9e9e9, #ffffff);
-    }
-    100% {
-      background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    }
-  }
-
-  .locker .container-state {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -15px;
-    margin-left: -10px;
-  }
-
-  .locker .container-id {
-    width: 100%;
-    text-align: center;
-    font-size: 25px;
-    margin-bottom: 5px;
-    position: absolute;
-    bottom: 0
-  }
-</style>
-<div class="locker"
-  (click)="panel.callActorService(component, component._state.status == 'locked' ?  'open' : 'close', $event)"
-  [ngClass]="{'locked':component._state.status == 'locked', 'pending':component._state.status == 'pending' }">
-  <img class="container-state"
-    src="{{panel.getComponentPluginDirectory(component)}}{{component._state.status == 'locked' ? 'images/closed.svg' : 'images/opened.svg'}}">
-  <span class="container-id">{{component._state.lockerId}}</span>
-
-</div>
+<ti-locker
+  [state]="component._state"
+  (open)="panel.callActorService(component, 'open', $event)"
+  (close)="panel.callActorService(component, 'close', $event)"
+></ti-locker>
