--- a/web/lockerArray.html
+++ b/web/lockerArray.html
@@ -1,89 +1,5 @@
-<style>
-  .gropup-lockers-wrapper {
-    width: 100%;
-    overflow: scroll;
-  }
-
-  .locker {
-    color: rgb(93, 93, 93);
-    border: 1px solid rgb(235, 235, 235);
-    width: 100%;
-    height: 100%;
-    position: relative;
-  }
-
-  .locked {
-    border-color: rgb(235, 46, 86);
-  }
-
-  .pending {
-    background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    animation: gradient 3s infinite;
-  }
-
-  @keyframes gradient {
-    0% {
-      background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    }
-
-    50% {
-      background: linear-gradient(145deg, #e9e9e9, #ffffff);
-    }
-
-    100% {
-      background: linear-gradient(145deg, #ffffff, #e9e9e9);
-    }
-  }
-
-  .locker .container-state {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -15px;
-    margin-left: -10px;
-  }
-
-  .locker .container-id {
-    width: 100%;
-    text-align: center;
-    font-size: 25px;
-    margin-bottom: 5px;
-    position: absolute;
-    bottom: 0
-  }
-</style>
-<div>
-  <span id="1"></span>
-  
-</div>
-<div class="gropup-lockers-wrapper">
-  <mat-grid-list [style.width.px]="component.state.widthUnits * 100"
-    [style.height.px]="component.state.heightUnits * 105" class="lockers-container"
-    cols="{{component.state.widthUnits}}" gutterSize="0px" rowHeight="100px">
-    <mat-grid-tile *ngFor="let item of component.state.arrayOfLockers" [colspan]=item.widthUnits
-      [rowspan]=item.heightUnits>
-
-
-      <!-- <div (click)="panel.callDeviceService(component, item.status == 'locked' ?  'open' : 'close', item.lockerId)"
-        [className]="item.status == 'locked' ? 'locker locked' : 'locker'">
-        <img class="container-state"
-          src="{{panel.getComponentPluginDirectory(component)}}{{item.status == 'locked' ? 'images/closed.svg' : 'images/opened.svg'}}">
-        <span class="container-id">{{item.lockerId}}</span>
-
-      </div> -->
-
-
-      <div class="locker"
-        (click)="panel.callDeviceService(component, item.status == 'locked' ?  'open' : 'close', item.lockerId)"
-        [ngClass]="{'locked':item.status == 'locked', 'pending':item.status == 'pending' }">
-        <img class="container-state"
-          src="{{panel.getComponentPluginDirectory(component)}}{{item.status == 'locked' ? 'images/closed.svg' : 'images/opened.svg'}}">
-        <span class="container-id">{{item.lockerId}}</span>
-
-      </div>
-    </mat-grid-tile>
-  </mat-grid-list>
-
-</div>
+<ti-group-of-lockers
+[state]="component.state" 
+(open)="panel.callDeviceService(component, 'open', $event)"
+(close)="panel.callDeviceService(component, 'close', $event)"
+></ti-group-of-lockers>
