smal issue fixed

--- a/web/lockerArray.html
+++ b/web/lockerArray.html
@@ -1,5 +1,5 @@
 <ti-group-of-lockers
-[state]="component.state" 
+[state]="component._state" 
 (open)="panel.callDeviceService(component, 'open', $event)"
 (close)="panel.callDeviceService(component, 'close', $event)"
 ></ti-group-of-lockers>
